--- a/ELibrary/templates/info.html
+++ b/ELibrary/templates/info.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Info</title>
 </head>
 <body>
 
-<h1>Welcome to ELibrary!</h1>
+<h1>Info</h1>
 
 </body>
 </html>
