--- a/ELibrary/templates/login.html
+++ b/ELibrary/templates/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Login page</title>
 </head>
 <body>
+    <h1>Login page</h1>
     <button class="btn btn-info mb-2">
         <a href="{% url 'social:begin' 'github' %}">Login with Github</a>
     </button>
