--- a/ELibrary/templates/logout.html
+++ b/ELibrary/templates/logout.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Homepage</title>
+<title>Logout page</title>
 </head>
 <body>
 
-<h1>Homepage</h1>
+<h1>Logout page</h1>
 
 </body>
 </html>
