--- a/ELibrary/templates/home.html
+++ b/ELibrary/templates/home.html
@@ -6,6 +6,11 @@
 <body>
 
 <h1>Homepage</h1>
+{% if user.is_authenticated%}
+    <button class="btn btn-info mb-2">
+        <a href="/logout/">Logout</a>
+    </button>
+{% endif %}
 
 </body>
 </html>
