--- a/ELibrary/templates/info.html
+++ b/ELibrary/templates/info.html
@@ -6,6 +6,10 @@
 <body>
 
 <h1>Info</h1>
-
+{% if user.is_authenticated%}
+    <button class="btn btn-info mb-2">
+        <a href="/logout/">Logout</a>
+    </button>
+{% endif %}
 </body>
 </html>
